Cleanup paragraph implementation, resolve white space issues, resolve 2, 4, 5, & 6

--- a/resources/ut-tei/src/scss/tei/components/_paragraph.scss
+++ b/resources/ut-tei/src/scss/tei/components/_paragraph.scss
@@ -1,28 +1,39 @@
 p {
+  font-size: 18px !important;
+  line-height: 1.62em;
+  letter-spacing: 0;
+  text-align: justify;
+  text-justify: inter-word;
+  text-indent: $text-indent;
+
+  /*
+   * default implementation of <p>
+   */
   &.tei-p1 {
-    font-size: 18px !important;
+    font-family: $serif-generic;
     line-height: 1.62em;
-    letter-spacing: 0;
-    text-align: justify;
-    text-justify: inter-word;
   }
 
+  /*
+   * @rend=block
+   */
   &.tei-p2 {
-    font-size: 18px !important;
+    font-family: $serif-generic;
     line-height: 1.62em;
-    letter-spacing: 0;
-    text-align: justify;
-    text-justify: inter-word;
     text-indent: 0;
   }
 
+  /*
+   * @rend=right
+   */
   &.tei-p3 {
-    font-size: 18px !important;
+    font-family: $serif-generic;
     line-height: 1.62em;
-    letter-spacing: 0;
     text-align: right;
-    text-justify: inter-word;
+    text-indent: 0;
   }
 
-  text-indent: $text-indent;
+  * {
+    text-indent: 0 !important;
+  }
 }
