--- a/resources/ut-tei/src/scss/tei/components/_popover.scss
+++ b/resources/ut-tei/src/scss/tei/components/_popover.scss
@@ -6,12 +6,13 @@
   font-weight: 400;
   padding: 10px 15px !important;
 
-  div, em, span {
+  div, em, span, * {
     display: inline !important;
     margin: 0 !important;
     padding: 0 !important;
     background-color: $smokey !important;
     color: $white !important;
+    letter-spacing: 0;
   }
 }
 
